text align fixes

--- a/src/pages/MathUI.css
+++ b/src/pages/MathUI.css
@@ -6,8 +6,14 @@
   margin: 50px !important;
 }
 
-.simp-line {
-  margin-left: 260px;
+.simp-col-l {
+  text-align: right !important;
+  margin-left: -185px;
+}
+
+.simp-col-r {
+  text-align: left !important;
+  margin-left: -25px;
 }
 
 .simp {
